// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user resources createUserSetting should resolve on success 1`] = `
{
  "config": {
    "data": "{"data":{"1":{"display_order":1,"hide":false}},"type":"ticket-views"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/users/0/settings/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": {
      "1": {
        "display_order": 1,
        "hide": false,
      },
    },
    "id": 2,
    "type": "ticket-views",
  },
  "headers": undefined,
  "request": {
    "responseUrl": "/api/users/0/settings/",
  },
  "status": 200,
}
`;

exports[`user resources updateUserSetting should resolve on success 1`] = `
{
  "config": {
    "data": "{"data":{"1":{"display_order":1,"hide":false}},"id":2,"type":"ticket-views"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "put",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/users/0/settings/2/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": {
      "1": {
        "display_order": 1,
        "hide": false,
      },
    },
    "id": 2,
    "type": "ticket-views",
  },
  "headers": undefined,
  "request": {
    "responseUrl": "/api/users/0/settings/2/",
  },
  "status": 200,
}
`;

exports[`user resources updateUserSetting should resolve on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "data": "{"data":{"1":{"display_order":1,"hide":false}},"id":2,"type":"ticket-views"}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/users/0/settings/2/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;
